[package]
name = "aoc22"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
bit-vec = "0.6.3"
fxhash = "0.2.1"
nom = "7.1.1"
num = "0.4.0"
scan_fmt = "0.2.6"
